# quantum_simulator

./: .env.development  .env.production  .gitignore  README.md  grammar.md  package-lock.json  project_description.md  tutorial.md
.github/workflows/: build-docker.yaml  deploy-backend.yaml  deploy-k8s.yaml  ghcr.yml  node.js.yml  rust.yml
DB/: Dockerfile  database.puml
backend/: .gitignore  Cargo.toml  Dockerfile
backend/src/: gate.rs  handler.rs  interpreter.rs  main.rs  models.rs  quantum_register.rs  qubit.rs  route.rs
frontend/: .env.Production  .env.production  .gitignore  Dockerfile  jest.config.js  package-lock.json  package.json  tsconfig.json
frontend/src/: global.d.ts  lexer.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/landing/: page.tsx
frontend/src/app/sandbox/: page.tsx
frontend/src/components/: Analytics.tsx  Editor.tsx  Output.tsx  QuantumCircuit.css  QuantumCircuit.tsx  QubitTutorial.tsx  Rendering.tsx  common_style.css
frontend/src/data/: lessons.json
frontend/src/input_handler/: ast.ts  interpreter.ts  lexer.spec.ts  lexer.ts  parser.spec.ts  parser.ts  semanticAnalyzer.spec.ts  semanticAnalyzer.ts
frontend/src/lib/: gtag.ts
k8s/: deployment.yaml  service.yaml
src/: qubit.rs
