[package]
name = "quantum_simulator"
version = "0.1.0"
edition = "2021"

[dependencies]
nalgebra = "0.33.1"
float-cmp = "0.10.0"
rand = "0.8.5"
axum = "0.7.9"
serde = {version = "1.0.215", features = ["derive"]}
tokio = {version = "1.41.1", features = ["full"]}
tower-http = {version = "0.6.2", features = ["cors", "trace"]}
